@@ -1,4 +1,8 @@
-* 2014-09-18 - jan.bauerdick@open-xchange.com
+* 2014-09-18 - steffen.templin@open-xchange.com
+
+ - Fix for bug 34470: Use the client-provided time zone for conversion of mail dates
+
+ * 2014-09-18 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 34507: Added user-friendly error message
 
